# memfault-nrf7002dk

./: .gitignore  CMakeLists.txt  Kconfig  PRD.md  README.md  overlay-app-https-req.conf  overlay-app-mqtt-echo.conf  overlay-ble-prov.conf  overlay-https-req.conf  overlay-mqtt-echo.conf  overlay-mqtt-loop.conf  overlay-mqtt-pub.conf  overlay-nrf70-fw-stats-cdr.conf  overlay-project-key.conf  overlay-project-key.conf.template  pm_static_nrf7002dk_nrf5340_cpuapp.yml  prj.conf  sysbuild.conf
.github/workflows/: build.yml
boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
config/: memfault_metrics_heartbeat_config.def
script/: nrf70_fw_stats_parser_enhanced.py
src/: CMakeLists.txt  ble_provisioning.c  ble_provisioning.h  https_client.c  https_client.h  main.c  mflt_nrf70_fw_stats_cdr.c  mflt_nrf70_fw_stats_cdr.h  mflt_ota_triggers.c  mflt_stack_metrics.c  mflt_wifi_metrics.c  mqtt_client.c  mqtt_client.h  ota_trigger.c  ota_trigger.h  stack_unused_metrics.c  stack_unused_metrics.h
src/modules/: messages.h
src/modules/app_https_client/: CMakeLists.txt  Kconfig.app_https_client  app_https_client.c
src/modules/app_mqtt_client/: CMakeLists.txt  Kconfig.app_mqtt_client  app_mqtt_client.c
src/modules/ble_prov/: CMakeLists.txt  Kconfig.ble_prov  ble_prov.c  ble_prov.h
src/modules/button/: button.c
src/modules/memfault/: CMakeLists.txt  Kconfig.memfault
src/modules/wifi/: CMakeLists.txt  Kconfig.wifi  wifi.c  wifi.h
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
(+4 files in other folders)
